# nvr-1

./: .gitignore  CMakeLists.txt  README  config.c  config.example.ini  config.example.json  config.h  ini.c  jsmn.h  log.c  log.h  main.c  nvr.c  nvr.h  settings.c  settings.h  static-build.sh  types.h  utils.c  utils.h
